[project]
name = "ats-keywords"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nltk>=3.9.1",
    "openai>=1.97.0",
    "python-dotenv>=1.1.1",
    "streamlit>=1.47.0",
    "streamlit-local-storage>=0.0.25",
]

[dependency-groups]
dev = [
    "watchdog>=6.0.0",
]
